force-app/main/default/objects/Minimum_Wage_Rate__c/Minimum_Wage_Rate__c.object-meta.xml
<CustomObject>
    <label>Minimum Wage Rate</label>
    <nameField>
        <displayFormat>MWR-{000000}</displayFormat>
        <label>Min Wage Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Minimum Wages Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>