force-app/main/default/objects/Minimum_Wage_Rate__c/fields/Max_Employee__c.field-meta.xml
<CustomField>
    <fullName>Max_Employee__c</fullName>
    <label>Max Employee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>