force-app/main/default/objects/Minimum_Wage_Rate__c/fields/Min_Employee__c.field-meta.xml
<CustomField>
    <fullName>Min_Employee__c</fullName>
    <label>Min Employee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>