force-app/main/default/objects/Minimum_Wage_Rate__c/fields/Min_Wage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Min_Wage_Rate__c</fullName>
    <label>Min Wage Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>