force-app/main/default/objects/Minimum_Wage_Rate__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Code</label>
    <referenceTo>Zip_Code__c</referenceTo>
    <relationshipName>Min_Wages_Rate</relationshipName>
    <type>Lookup</type>
</CustomField>